@@ -1,5 +1,5 @@
 /*
- * Copyright 2003-2012 JetBrains s.r.o.
+ * Copyright 2003-2025 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,58 +16,57 @@
 package jetbrains.mps.smodel.language;
 
 import jetbrains.mps.classloading.ClassLoaderManager;
-import jetbrains.mps.classloading.MPSClassesListener;
-import jetbrains.mps.classloading.MPSClassesListenerAdapter;
+import jetbrains.mps.classloading.DeployListener;
+import jetbrains.mps.classloading.MPSModuleClassLoader;
+import jetbrains.mps.components.ComponentHost;
 import jetbrains.mps.components.CoreComponent;
-import jetbrains.mps.module.ReloadableModuleBase;
-import jetbrains.mps.project.Solution;
-import jetbrains.mps.smodel.Language;
-import jetbrains.mps.smodel.MPSModuleRepository;
+import jetbrains.mps.logging.Logger;
+import jetbrains.mps.module.ReloadableModule;
+import jetbrains.mps.project.SModuleOperations;
 import jetbrains.mps.smodel.structure.ExtensionDescriptor;
-import org.apache.log4j.LogManager;
-import org.apache.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.mps.openapi.module.SModule;
-import org.jetbrains.mps.openapi.module.SRepositoryListener;
-import org.jetbrains.mps.openapi.module.SRepositoryListenerBase;
+import org.jetbrains.mps.openapi.module.SModuleReference;
+import org.jetbrains.mps.openapi.util.ProgressMonitor;
 
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.Map;
 import java.util.Set;
 
+/**
+ * Registry of extensions populated by classes loaded from compiled and deployed modules
+ */
 public class ExtensionRegistry extends BaseExtensionRegistry implements CoreComponent {
-  private static Logger LOG = LogManager.getLogger(ExtensionRegistry.class);
+  private static final Logger LOG = Logger.getLogger(ExtensionRegistry.class);
 
   private static ExtensionRegistry INSTANCE;
 
-  private Map<SModule, String> myModuleToNamespace = new HashMap<SModule, String>();
-  private HashMap<String, ExtensionDescriptor> myExtensionDescriptors = new HashMap<String, ExtensionDescriptor>();
-  private SRepositoryListener myListener = new MyModuleRepositoryAdapter();
-  @Nullable
-  private ClassLoaderManager myClm;
-  @Nullable
-  private MPSModuleRepository myRepo;
-  private final MPSClassesListener myClassesListener = new MPSClassesListenerAdapter() {
+  private final HashMap<SModuleReference, ExtensionDescriptor> myExtensionDescriptors = new HashMap<>();
+  private final ClassLoaderManager myClm;
+  private final DeployListener myClassesListener = new DeployListener() {
+
     @Override
-    public void beforeClassesUnloaded(Set<? extends ReloadableModuleBase> unloadedModules) {
-      unloadExtensionDescriptors(unloadedModules);
+    public void onUnloaded(@NotNull Set<ReloadableModule> unloadedModules, @NotNull ProgressMonitor monitor) {
+      unloadExtensionDescriptors(unloadedModules, monitor);
     }
 
     @Override
-    public void afterClassesLoaded(Set<? extends ReloadableModuleBase> loadedModules) {
-      loadExtensionDescriptors(loadedModules);
+    public void onLoaded(@NotNull Set<ReloadableModule> loadedModules, @NotNull ProgressMonitor monitor) {
+      loadExtensionDescriptors(loadedModules, monitor);
     }
   };
 
+  /**
+   * @deprecated avoid static access, replace with {@link ComponentHost#findComponent(Class) componentHost.findComponent(ExtensionRegistry.class)}
+   */
+  @Deprecated
   public static ExtensionRegistry getInstance() {
     return INSTANCE;
   }
 
-  public ExtensionRegistry(@Nullable ClassLoaderManager clm, @Nullable MPSModuleRepository repo) {
+  public ExtensionRegistry(@NotNull ClassLoaderManager clm) {
     myClm = clm;
-    myRepo = repo;
   }
 
   @Override
@@ -75,137 +74,68 @@ public class ExtensionRegistry extends BaseExtensionRegistry implements CoreComp
     if (INSTANCE != null) {
       throw new IllegalStateException("double initialization");
     }
-    if (myRepo != null) {
-      myRepo.addRepositoryListener(myListener);
-    }
-    if (myClm != null) {
-      myClm.addClassesHandler(myClassesListener);
-    }
+    myClm.addListener(myClassesListener);
     INSTANCE = this;
   }
 
   @Override
   public void dispose() {
+    myClm.removeListener(myClassesListener);
     INSTANCE = null;
-    if (myClm != null) {
-      myClm.removeClassesHandler(myClassesListener);
-    }
-    if (myRepo != null) {
-      myRepo.removeRepositoryListener(myListener);
-    }
   }
 
-  private void unloadExtensionDescriptors(Collection<? extends SModule> unloadedModules) {
+  private void unloadExtensionDescriptors(Collection<ReloadableModule> unloadedModules, ProgressMonitor monitor) {
+    monitor.start("Unregister extensions...", unloadedModules.size());
     for (SModule module : unloadedModules) {
-      final ExtensionDescriptor desc = myExtensionDescriptors.remove(module.getModuleName());
+      final ExtensionDescriptor desc = myExtensionDescriptors.remove(module.getModuleReference());
       if (desc != null) {
         unregisterExtensionDescriptor(desc);
       }
+      monitor.advance(1);
     }
+    monitor.done();
   }
 
-  private void loadExtensionDescriptors(Collection<? extends SModule> loadedModules) {
-    for (SModule module : loadedModules) {
-      String namespace = myModuleToNamespace.get(module);
-      if (namespace == null) {
-        namespace = module.getModuleName();
-      }
-
+  private void loadExtensionDescriptors(Collection<ReloadableModule> loadedModules, ProgressMonitor monitor) {
+    monitor.start("Register extensions...", loadedModules.size());
+    for (ReloadableModule module : loadedModules) {
       ExtensionDescriptor desc = findExtensionDescriptor(module);
       if (desc != null) {
-        myModuleToNamespace.put(module, namespace);
-        myExtensionDescriptors.put(namespace, desc);
+        assert !myExtensionDescriptors.containsKey(module.getModuleReference()) : "Double registration of extensions for the same module";
+        myExtensionDescriptors.put(module.getModuleReference(), desc);
         registerExtensionDescriptor(desc);
-      } else {
-        myModuleToNamespace.remove(module);
       }
+      monitor.advance(1);
     }
+    monitor.done();
   }
 
-  public void registerExtensionDescriptor(ExtensionDescriptor extensionDescriptor) {
-    registerExtensions(extensionDescriptor.getExtensions());
-    registerExtensionPoints(extensionDescriptor.getExtensionPoints());
-  }
-
-    public void unregisterExtensionDescriptor(ExtensionDescriptor extensionDescriptor) {
-    unregisterExtensionPoints(extensionDescriptor.getExtensionPoints());
-    unregisterExtensions(extensionDescriptor.getExtensions());
-  }
-
-  private ExtensionDescriptor findExtensionDescriptor(SModule mod) {
-    if (mod instanceof Language) {
-      return findLanguageExtensionDescriptor((Language) mod);
-    } else if (mod instanceof Solution) {
-      switch (((Solution) mod).getKind()) {
-        case PLUGIN_CORE:
-        case PLUGIN_EDITOR:
-        case PLUGIN_OTHER:
-          return findPluginSolutionExtensionDescriptor((Solution) mod);
-
-        default:
-          break;
+  private static ExtensionDescriptor findExtensionDescriptor(ReloadableModule mod) {
+    if (SModuleOperations.canSupplyExtensionsForMPS(mod.getModule())) {
+      // TODO: more flexible way of loading extensions from a module
+      String namespace = mod.getModuleName();
+      // FIXME quick-n-dirty hack for MPS-38457, until I come up with a mechanism to configure location where to take ExtensionDescriptor from
+      if ("jetbrains.mps.ide.refactoring.platform".equals(namespace)) {
+        namespace = "jetbrains.mps.refactoring.participant";
       }
-    }
-    return null;
-  }
-
-  private ExtensionDescriptor findPluginSolutionExtensionDescriptor(Solution solution) {
-    // TODO: more flexible way of loading extensions from plugin solution
-    String namespace = solution.getModuleName();
-    String className = namespace + ".plugin.ExtensionDescriptor";
-    Object compiled = getObjectByClassName(className, solution, true);
-    if (compiled instanceof ExtensionDescriptor) {
-      return (ExtensionDescriptor) compiled;
-    }
-    return null;
-  }
-
-  private ExtensionDescriptor findLanguageExtensionDescriptor(Language lang) {
-    String namespace = lang.getModuleName();
-    String className = namespace + ".plugin.ExtensionDescriptor";
-    Object compiled = getObjectByClassName(className, lang, true);
-    if (compiled instanceof ExtensionDescriptor) {
-      return (ExtensionDescriptor) compiled;
+      String className = namespace + ".plugin.ExtensionDescriptor";
+      Object compiled = getObjectByClassName(className, mod.getClassLoader());
+      if (compiled instanceof ExtensionDescriptor) {
+        return (ExtensionDescriptor) compiled;
+      }
+      return null;
     }
     return null;
   }
 
   @Nullable
-  public static Object getObjectByClassName(String className, @Nullable SModule module, boolean avoidLogErrors) {
+  private static Object getObjectByClassName(String className, MPSModuleClassLoader moduleCL) {
     try {
-      if (module == null) {
-        return null;
-      }
-
-      Class clazz = ClassLoaderManager.getInstance().getOwnClass(module, className);
-      if (clazz == null) {
-        return null;
-      }
-
-      return clazz.newInstance();
+      Class<?> clazz = moduleCL.loadOwnClass(className);
+      return clazz.getDeclaredConstructor().newInstance();
     } catch (Throwable e) {
-      LOG.debug("error loading class\"" + className + "\"", e);
+      LOG.trace("error loading class\"" + className + "\"", e);
     }
-
     return null;
-  }
-
-  private class MyModuleRepositoryAdapter extends SRepositoryListenerBase {
-    @Override
-    public void moduleAdded(@NotNull SModule module) {
-      // awaiting next classes reload?
-    }
-
-    @Override
-    public void beforeModuleRemoved(@NotNull SModule module) {
-      String namespace = myModuleToNamespace.get(module);
-      if (namespace == null) return;
-
-      ExtensionDescriptor desc = myExtensionDescriptors.remove(namespace);
-      if (desc == null) return;
-
-      unregisterExtensionDescriptor(desc);
-      myModuleToNamespace.remove(module);
-    }
   }
 }
